changed folders to a more general convention added changes for framework-only usage

--- a/app_config/_config/config.yml
+++ b/app_config/_config/config.yml
@@ -1,6 +1,6 @@
 ---
 Name: app_config
-After: 'framework/*','cms/*'
+After: 'framework/*'
 ---
 # YAML configuration for SilverStripe
 # See http://doc.silverstripe.org/framework/en/topics/configuration
